Add EchAwareDns for Android 37 (#9596)
* Add EchAwareDns as an option on Android 37